# Robot_projekt

./: README.md
pparm_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
pparm_ws/install/pparm_ros2/share/ament_index/resource_index/parent_prefix_path/: pparm_ros2
pparm_ws/install/pparm_ros2/share/pparm_ros2/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
pparm_ws/install/pparm_ros2/share/pparm_ros2/cmake/: pparm_ros2Config.cmake
pparm_ws/install/pparm_ros2/share/pparm_ros2/launch/: check_urdf.launch.py
pparm_ws/install/pparm_ros2/share/pparm_ros2/rviz/: main_urdf_config.rviz  urdf_config.rviz
pparm_ws/install/pparm_ros2/share/pparm_ros2/urdf/: arm.urdf
pparm_ws/log/: latest_build
pparm_ws/src/pparm_ros2/: CMakeLists.txt  package.xml  setup.cfg  setup.py
pparm_ws/src/pparm_ros2/launch/: pp_world.launch.py
pparm_ws/src/pparm_ros2/rviz/: rviz_config.rviz
pparm_ws/src/pparm_ros2/worlds/: pp_world.sdf
